<resources>
    <string name="email_hint">Email address</string>
    <string name="password">Password</string>
    <string name="login_label">Login to my account</string>
    <string name="vams_label">VAMS</string>
    <string name="vams_full_label">Vehicle Activation Management system (VAMS)</string>
    <string name="forgot_password_label"><u>Forgot password</u></string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>
    <string name="tab_vehicles">Vehicles</string>
    <string name="tab_spare_parts">Spare parts</string>
    <string name="tab_trackers">Trackers</string>
    <string name="reason_label">Reason</string>
    <string name="total_entry_label">Entries</string>
    <string name="sub_entry_label">Entries</string>
    <string name="sub_entrytwo_label">Entries</string>
    <string name="exit_label">Exits</string>
    <string name="entry_reason_header">Reason for entry</string>
    <string name="exit_reason_header">Reason for exit</string>
    <string name="default_reason_subtitle">Monthly scheduled maintenance performed on various remoteVehicle assets</string>
    <string name="defualt_vehicle_reason_label">Maintenance</string>
    <string name="plate_number_label">Plate Number</string>
    <string name="location_label">Location</string>
    <string name="vehicle_type_label">Vehicle Type</string>
    <string name="movement_type_label">Movement Type</string>
    <string name="vehicle_id_label">Vehicle ID</string>
    <string name="odometer_reading_label">Odometer Reading</string>
    <string name="select_location_label">- Select Location -</string>
    <string name="select_vehicle_type_label">- Select Vehicle Type -</string>
    <string name="select_movement_type_label">- Select Movement Type -</string>
    <string name="enter_vehicle_id_hint">Enter Vehicle ID</string>
    <string name="enter_odometer_reading_hint">Enter Odometer Reading</string>
    <string name="enter_reason_hint">Enter Reason</string>

    <string name="back_to_dashboard_label">back to dashboard</string>
    <string name="you_have_successfully_label">You have successfully %s</string>
    <string name="dialog_entry_label">Add Entry (Check-in Vehicle)</string>
    <string name="dialog_entry_sub_label">Check in vehicles.</string>
    <string name="dialog_exit_sub_label">Check out vehicles.</string>
    <string name="dialog_exit_label">Add Exit (Check-out Vehicle)</string>
    <string name="registered_by_label">Registered By</string>
    <string name="odometer_label">Odometer</string>
    <string name="time_of_entry_label">Time of entry</string>
    <string name="live_action_label">Live action</string>
    <string name="location_data">%1s(%2s)</string>
    <string name="liveActionData">Undergoing Maintenance</string>
    <string name="entry_header_label">Entry (%s)</string>
    <string name="exit_header_label">Exit (%s)</string>
    <string name="by_name_label">By %1s</string>
    <string name="by_date_label">By %1s (today)</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="profile_label">Profile</string>
    <string name="settings_label">Application Settings</string>
    <string name="sign_out_label">Sign out</string>
    <string name="view_profile_label">View Profile</string>
    <string name="update_password_label">Change Password</string>
    <string name="search_hint_label">Enter vehicle ID</string>
    <string name="email_label">Email Address</string>
    <string name="log_in_label"><u>Log into my account</u></string>
    <string name="tempPassword_label">Temp Password</string>
    <string name="newPassword_label">New Password</string>
    <string name="movement_error_message">Vehicle is already %s</string>
    <string name="odometer_data">%skm</string>
    <string name="confirmPassword_label">Confirm Password</string>
    <string name="currentPassword_label">Current Password</string>
    <string name="tempPassword_hint">Temp password</string>
    <string name="newPassword_hint">New password</string>
    <string name="location_string">location</string>
    <string name="vehicleType_string">vehicleType</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicle_plate_number_label">Vehicle Plate Number/ID</string>
    <string name="enter_plate_number_header">ENTER PLATE NUMBER/ID</string>
    <string name="enter_plate_number_label">Enter Plate Number/ID</string>
    <string name="back_button_label">Back Button</string>
    <string name="loading_vehicle_details_label">Loading vehicle details</string>
    <string name="enter_reason_title">Enter %s reason</string>
    <string name="select_destination_label">-Select Destination-</string>
    <string name="default_name">%1s %2s</string>
    <string name="confirm_label">Confirm</string>
    <string name="vehicle_detail_title">%s  Detail</string>
    <string name="confirm_movement_label">Confirm %s</string>
    <string name="vehicle_max_id_label">Vehicle Max ID</string>
    <string name="champion_label">Champion</string>
    <string name="close_button">close button</string>
    <string name="error_message">Something went wrong.</string>
    <string name="mo_movement_error_message">Please check in this vehicle first.</string>
    <string name="retrieval_agent_label">Retrieval Agent\'s Name</string>
    <string name="enter_retrieval_agent_hint">Enter retrieval agent</string>
    <string name="items_to_retrieve_label">Items to retrieve</string>
    <string name="entry_search_info_tip">All vehicles here are Active</string>
    <string name="exit_search_info_tip">All vehicles here are Inactive</string>
    <string name="continue_label">Continue</string>
    <string name="champion_name_label">Champion Name</string>
    <string name="champion_id_label">Champion ID</string>
    <string name="champion_details_label">Champion Details</string>
    <string name="sub_reason_label">Sub-Reason</string>
    <string name="movement_type_header">%s Details</string>
    <string name="vehicle_detail_label">Vehicle Details</string>
    <string name="movement_header">Movement Details</string>
    <string name="current_location_label">Location (From)</string>
    <string name="movement_location_label">Location (%s)</string>
    <string name="location_destination_label">Location (Destination)</string>
    <string name="location_from_label">Location (From)</string>
    <string name="location_checkin_label">Check-in Location</string>
    <string name="check_label">Check %s</string>
    <string name="amount_defaulted_header">Amount Defaulted</string>
    <string name="select_movement_reason_hint">-Select movement reason-</string>
    <string name="select_movement_sub_reason_hint">-Select Movement Sub-Reason -</string>
    <string name="bike_label">Bike</string>
    <string name="movement_reason_label">Movement Reason</string>
    <string name="movement_sub_reason_label">Movement Sub-reason</string>
    <string name="items_retrieve_label">Items retrieved</string>
    <string name="view_transfer_details_label">View Transfer Details</string>
    <string name="transfer_notifications_label">Transfer Notifications</string>
    <string name="accept_transfer_label">Accept Transfer</string>
    <string name="reject_transfer_label">Reject Transfer</string>
    <string name="tranfer_info_subtitle_label">The entire Vehicle Ops team would be notified of your action.</string>
    <string name="initial_count">0</string>
    <string name="dashboard_motorcycle">Motorcycle</string>
    <string name="dashboard_tricycle">Tricycle</string>
    <string name="dashboard_car">Car</string>
    <string name="dashboard_minibus">Mini Bus</string>
    <string name="dashboard_E_motorcycle">E-Motorcycle</string>
    <string name="dashboard_E_tricycle">E-Tricycle</string>
    <string name="dashboard_van">Van</string>
    <string name="overall_card">Overall</string>
    <string name="entries_card">Entries</string>
    <string name="enter_amount_defaulted_hint">Enter amount defaulted</string>
    <string name="transfer_details_header">Transfer Details</string>
    <string name="confirm_vehicle_transfer_entry_header">CONFIRM VEHICLE TRANSFER ENTRY</string>
    <string name="from_label">From</string>
    <string name="destination_label">Destination</string>
    <string-array name="movement_type">
        <item>Entry</item>
        <item>Exit</item>
    </string-array>
    <string-array name="recovered_items">
        <item>Complete side mirror</item>
        <item>Helmet</item>
        <item>Spare tyres</item>
        <item>Tracker</item>
        <item>Plate number</item>
        <item>Complete vehicle tyre</item>
        <item>Vehicle keys</item>
        <item>Battery</item>
    </string-array>
</resources>