<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:src="@drawable/ic_checkin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6">

        <ng.max.vams.customview.MovementTypeCardView
            android:id="@+id/card_overall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.9"
            app:count="0"
            app:countColor="@color/very_light_green"
            app:title="@string/total_entry_label" />

        <ng.max.vams.customview.MovementTypeCardView
            android:id="@+id/card_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.9"
            app:count="0"
            app:countColor="@color/very_light_green"
            app:title="@string/sub_entry_label" />

        <ng.max.vams.customview.MovementTypeCardView
            android:id="@+id/card_user_today"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            app:count="0"
            app:countColor="@color/very_light_green"
            app:title="@string/sub_entrytwo_label" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>