<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/dimen_0dp"
    app:cardMaxElevation="@dimen/dimen_0dp"
    app:shapeAppearance="@style/ShapeAppearanceCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_16dp"
        tools:context=".modules.champions.payment.ConfirmPaymentDetailFragment">


        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="@dimen/dimen_36dp"
            android:layout_height="@dimen/dimen_36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/close_button" />


        <LinearLayout
            android:id="@+id/detailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/curved_background"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:fontFamily="@font/ttcommons_medium"
                android:text="@string/vehicle_detail_title"
                android:textColor="@color/very_dark_gray_very_black" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:background="@color/very_light_gray" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimen_4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_regular"
                        android:text="@string/vehicle_max_id_label"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/vehicleMaxIdTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_demibold"
                        android:textAlignment="textEnd"
                        android:textColor="@color/very_dark_gray" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginBottom="@dimen/dimen_4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_regular"
                        android:text="@string/champion_label"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/championTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_demibold"
                        android:textAlignment="textEnd"
                        android:textColor="@color/very_dark_gray" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:layout_marginBottom="@dimen/dimen_4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_regular"
                        android:text="@string/reason_label"
                        android:textColor="@color/dark_gray" />

                    <TextView
                        android:id="@+id/reasonTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/ttcommons_demibold"
                        android:textAlignment="textEnd"
                        android:textColor="@color/very_dark_gray" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/ttcommons_bold"
            android:text="@string/confirm_movement_label"
            android:textColor="@color/very_dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ng.max.vams.customview.ProgressButton
            android:id="@+id/confirmBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/detailLayout"
            app:layout_constraintStart_toStartOf="@+id/detailLayout"
            app:layout_constraintTop_toBottomOf="@+id/detailLayout"
            app:text="@string/confirm_label"
            app:textColor="@color/very_dark_gray" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>